browser/themes/shared/preferences/preferences.css
/* ... */
.translations-manage-language {
  align-items: center;
  padding: 0 8px;
}

.translations-manage-language > label {
  flex: 1;
  margin: 0 15px;
}

#translations-manage-error {
  color: var(--text-color-error);
  margin: var(--space-large) 0;
}

.translations-download-language-error {
  background-color: var(--background-color-critical);
}

.hidden-category {
  display: none;
}
/* Platform-specific tweaks & overrides */

@media (-moz-platform: macos) {
  tabpanels {
    padding: 20px 7px 7px;
  }

  #browserUseCurrent,
  #browserUseBookmark,
  #browserUseBlank {
    margin-top: 10px;
  }

  #privacyPrefs {
    padding: 0 4px;
  }

  #privacyPrefs > tabpanels {
    padding: 18px 10px 10px;
  }

  #OCSPDialogPane {
    font: message-box !important;
  }

  /**
   * Update Preferences
   */
  #autoInstallOptions {
    margin-inline-start: 20px;
  }

  .updateControls {
    margin-inline-start: 10px;
  }
}

@media (-moz-platform: linux) {
  .treecol-sortdirection {
    /* override the Linux only toolkit rule */
    appearance: none;
  }
}

.section-heading,
.section-description {
  margin: 0 0 var(--space-small);
}

.subsection-heading {
  margin-bottom: var(--space-small);
}

.section-header-last {
  margin: 0 0 var(--space-large);
}

.search-header:has(.section-heading) {
  margin: 0;
}

/* Styles for the "sponsors support our mission" message and link on the Home tab */
.mission-message {
  margin-block-start: var(--space-large);

  > a {
    font-size: var(--font-size-small);
  }
}

#dohProviderSelect {
  --select-max-width: 235px;
}

#browserContainersbox moz-message-bar {
  margin-block-start: 0;
}

#etpBannerEl {
  border-radius: var(--border-radius-large);
  background-clip: content-box;
  background-image:
    url("chrome://browser/content/preferences/etp-advanced-banner.svg"),
    radial-gradient(151.822% 149.985% at 50% -42.53%, rgba(174, 73, 236, 1), rgba(33, 3, 64, 1));
  background-repeat: no-repeat;
  background-position: center;
  height: 128px;
}

#etpLevelWarning {
  --promo-image-position: top;
}

#etpResetButtonGroup {
  display: flex;
  gap: var(--space-small);
}

#addresses-list-header,
#payments-list-header {
  --box-label-font-weight: var(--font-weight-heading);
}

.box-header-bold {
  --box-label-font-weight: var(--font-weight-heading);
}

