Bug 2026647 - Make ETP advanced banner show the shield in high contrast mode - r=emz,desktop-theme-reviewers,tgiles
Differential Revision: https://phabricator.services.mozilla.com/D290533

UltraBlame original commit: 6255192fe31e1ce06d81dd307193960b0967859a

--- a/browser/themes/shared/preferences/preferences.css
+++ b/browser/themes/shared/preferences/preferences.css
@@ -1623,6 +1623,12 @@ setting-group[groupid="aiStatesDescription"] {
   height: 128px;
 }
 
+@media (forced-colors: active) {
+  #etpBannerEl {
+    background-image: url("chrome://browser/content/preferences/etp-advanced-banner.svg");
+  }
+}
+
 #etpLevelWarning {
   --promo-image-position: top;
 }
